# steiger-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
npm/steiger-rust/: README.md  package.json
npm/steiger-rust/lib/: platform.js
npm/steiger-rust/test/: platform.test.js
scripts/: platforms.mjs  prepare-npm-release.mjs  set-version.mjs  stage-npm-binaries.mjs
src/: baseline.rs  config.rs  diagnostic.rs  engine.rs  fsd.rs  imports.rs  lib.rs  main.rs  path_utils.rs  reporter.rs
src/rules/: import_rules.rs  mod.rs  structural.rs
tests/: baseline_cli.rs  config_scoping.rs  kitchen_sink.rs  npm_native_cli.mjs
